syntax="proto3";
package clientServer;

option go_package="clientServer";

service SayHelloService{
    rpc SayHello(SayHelloRequest) returns (SayHelloResponse);
}

message SayHelloRequest{
    string name=1;
}

message SayHelloResponse{
    string greeting=1;
}
